namespaces/live.cloud-platform.service.justice.gov.uk/victim-witness-info/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: victim-witness-info
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "central-digital-product-team"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "Central Digital Product Team: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/victim-witness-info"
    cloud-platform.justice.gov.uk/team-name: "central-digital-product-team"
    cloud-platform.justice.gov.uk/review-after: ""
